--- a/build.gradle
+++ b/build.gradle
@@ -68,15 +68,15 @@ dependencies {
 
     /* Database */
     // testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
-    // runtimeOnly'mysql:mysql-connector-java'
-    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // After configuring DB connection
+    runtimeOnly'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // After configuring DB connection
     // implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 
-    // implementation 'com.querydsl:querydsl-jpa'
-    // implementation 'com.querydsl:querydsl-core'
-    // annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
-    // annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-    // annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+    implementation 'com.querydsl:querydsl-jpa'
+    implementation 'com.querydsl:querydsl-core'
+    annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
     /* Swagger */
     implementation 'io.springfox:springfox-swagger2:2.6.1'
@@ -95,5 +95,18 @@ dependencies {
 
     /* GSON */
     // implementation 'com.google.code.gson:gson'
+}
 
+//querydsl 추가
+def generated = 'src/main/generated'
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+    file(generated).deleteDir()
 }
