--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     // testCompile group: 'com.h2database', name: 'h2', version: '1.4.199'
     runtimeOnly'mysql:mysql-connector-java'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // After configuring DB connection
-    // implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 
     implementation 'com.querydsl:querydsl-jpa'
     implementation 'com.querydsl:querydsl-core'
