--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ gradle-app.setting
 
 ### Application.yml Files
 /src/main/resources/*.yml
+/src/test/resources/*.yml
 !application.yml
 
 # Default
